<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 - Simone Martucci <martucci.simone.91@gmail.com>
  ~ Copyright (C) 2014 - Mattia Mancini <mattia.mancini.1991@gmail.com>
  ~
  ~ This file is part of Foundme Professore.
  ~
  ~ Foundme Professore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foundme Professore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foundme Professore.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/reg_corso"
        android:id="@+id/etTitle"
        android:layout_below="@+id/ivLogo2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/reg_prof2"
        android:ems="10"
        android:id="@+id/etName2"
        android:typeface="normal"
        android:visibility="visible"
        android:layout_below="@+id/etName1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/reg_cfu"
        android:ems="10"
        android:id="@+id/etCfu"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitCourse"
        android:id="@+id/btSubmit"
        android:layout_below="@+id/etName3"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300px"
        android:id="@+id/ivLogo2"
        android:src="@drawable/tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/reg_prof3"
        android:ems="10"
        android:id="@+id/etName3"
        android:typeface="normal"
        android:visibility="visible"
        android:layout_below="@+id/etName2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/reg_prof1"
        android:ems="10"
        android:id="@+id/etName1"
        android:layout_below="@+id/etCfu"
        android:layout_centerHorizontal="true" />


</RelativeLayout>