<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 - Simone Martucci <martucci.simone.91@gmail.com>
  ~ Copyright (C) 2014 - Mattia Mancini <mattia.mancini.1991@gmail.com>
  ~
  ~ This file is part of Foundme Professore.
  ~
  ~ Foundme Professore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foundme Professore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foundme Professore.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"
        android:id="@+id/btnSendNotify"
        android:layout_below="@+id/etTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvCourseName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRoom"
        android:hint="@string/room"
        android:layout_marginTop="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCourseName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etTime"
        android:hint="@string/duration"
        android:layout_below="@+id/etRoom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/service_comunication"
        android:id="@+id/tvComunications"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/btnSendNotify"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:id="@+id/btnSendMsg"
        android:layout_below="@+id/tvComunications"
        android:layout_centerHorizontal="true" />

</RelativeLayout>