<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 - Simone Martucci <martucci.simone.91@gmail.com>
  ~ Copyright (C) 2014 - Mattia Mancini <mattia.mancini.1991@gmail.com>
  ~
  ~ This file is part of Foundme Professore.
  ~
  ~ Foundme Professore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foundme Professore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foundme Professore.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00222222">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_change"
        android:id="@+id/btEdit"
        android:background="#ff429874"
        android:textColor="#ffffffff"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTitle"
        android:layout_toLeftOf="@+id/tvTitle"
        android:layout_toStartOf="@+id/tvTitle"
        android:id="@+id/linearLayout2"
        android:background="#ff429874">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/editCourse"
            android:textColor="#ffffffff"
            android:id="@+id/tvText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/tvTitle"
            android:layout_below="@+id/tvText"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/info_del"
            android:id="@+id/tvInfo"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/tvText"
            android:layout_centerHorizontal="true"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etProf2"
            android:hint="@string/reg_prof2"
            android:layout_below="@+id/etChangeCfu"
            android:layout_centerHorizontal="true"
            android:textColor="#ff000000"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ff000000"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etProf3"
            android:hint="@string/reg_prof3"
            android:layout_below="@+id/etProf2"
            android:layout_centerHorizontal="true"
            android:textColor="#ff000000"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ff010101"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etChangeCfu"
            android:hint="@string/reg_cfu"
            android:textColor="#ff040404"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ff050505"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>